# predlp

./: DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
examples/: multilabel_classification.ipynb
predlp/: solver.py
tests/: test_solver.py
