[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'predlp'
dynamic = ["version"]

[tool.poetry]
name = "predlp"
version = "0.0.0"
description = "Prediction probabilities with a linear programming constraint"
authors = ["Justin Evans <11je20@queensu.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pulp = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

